--- a/css/custom.css
+++ b/css/custom.css
@@ -50,6 +50,12 @@ html, body {
 h2 {
     font-family: "Akkurat_Regular";
     font-variant: all-small-caps;
-    font-color: #000000;
+    color: #000000;
+}
+
+ul {
+    text-align: center;
+    list-style-type: none;
+    color: #000000;
 }
 
