--- a/css/custom.css
+++ b/css/custom.css
@@ -52,15 +52,10 @@ html, body {
     src: url('/Akkurat_Regular.otf');
 }
 
-h2 {
-    font-family: "Akkurat_Regular";
-    font-variant: all-small-caps;
-    color: #000000;
-}
 
 ul {
     text-align: center;
     list-style-type: none;
-    color: #000000;
+    font-size: 12px;
 }
 
